Revert "调整provider配置"
This reverts commit f3bcbbce5a9d1f6c8f98444285f037f0b27f241b.

# Conflicts:
#	start-agent.sh