@@ -29,10 +29,6 @@ elif [[ "$1" == "provider-small" ]]; then
   java -jar \
        -Xms512M \
        -Xmx512M \
-       -XX:+UseNUMA \
-       -XX:+UseCondCardMark \
-       -XX:-UseBiasedLocking \
-       -DRUN_TYPE=provider-small \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2552 \
        -DETCD_HOST=${ETCD_HOST} \
@@ -48,9 +44,6 @@ elif [[ "$1" == "provider-medium" ]]; then
   java -jar \
        -Xms1536M \
        -Xmx1536M \
-       -XX:+UseNUMA \
-       -XX:+UseCondCardMark \
-       -XX:-UseBiasedLocking \
        -DRUN_TYPE=provider-medium \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2553 \
@@ -67,9 +60,6 @@ elif [[ "$1" == "provider-large" ]]; then
   java -jar \
        -Xms2560M \
        -Xmx2560M \
-       -XX:+UseNUMA \
-       -XX:+UseCondCardMark \
-       -XX:-UseBiasedLocking \
        -DRUN_TYPE=provider-large \
        -DACTOR_SYSTEM_HOST=${AGENT_HOST} \
        -DACTOR_SYSTEM_PORT=2554 \
